# gateway

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  config.json  copyright.hpp  copyright.txt
dependencies/: CMakeLists.txt
dependencies/cmake/: RequireBoost.cmake
libs/: CMakeLists.txt
libs/application/: config.hpp  console.cpp  console.hpp  net.hpp
libs/config/: CMakeLists.txt  net.hpp  outcome.hpp  print.hpp  span.hpp  variant.hpp
libs/config/tests/: asio_coroutine_behaviour.spec.cpp
libs/minecraft/: CMakeLists.txt  compose.hpp  dimension.hpp  easy_io.hpp  encode.hpp  encode.spec.cpp  encryption_state.cpp  encryption_state.hpp  filesystem.hpp  gamemode.hpp  incomplete.hpp  math.hpp  minecraft.hpp  minecraft_stream.hpp  minecraft_stream.spec.cpp  multibyte.hpp  nbt.cpp  nbt.hpp  nbt.ipp  net.hpp  nvp.hpp  nvp.spec.cpp  overloaded.hpp  packet_id.hpp  parse.cpp  parse.hpp  parse.spec.cpp  parse_error.hpp  player.hpp  print.hpp  protocol_version.hpp  read_frame.hpp  read_frame.spec.cpp  report.hpp  security.cpp  shared_secret.hpp  slot_data.cpp  slot_data.cpp.nocompile  slot_data.spec.cpp  slot_data.spec.cpp.nocompile  (+17 more)
libs/minecraft/blocks/: acacia_button.hpp  acacia_door.hpp  acacia_fence.hpp  acacia_fence_gate.hpp  acacia_leaves.hpp  acacia_log.hpp  acacia_planks.hpp  acacia_pressure_plate.hpp  acacia_sapling.hpp  acacia_sign.hpp  acacia_slab.hpp  acacia_stairs.hpp  acacia_trapdoor.hpp  acacia_wall_sign.hpp  acacia_wood.hpp  activator_rail.hpp  air.hpp  allium.hpp  andesite.hpp  andesite_slab.hpp  andesite_stairs.hpp  andesite_wall.hpp  anvil.hpp  attached_melon_stem.hpp  attached_pumpkin_stem.hpp  azure_bluet.hpp  bamboo.hpp  bamboo_sapling.hpp  barrel.hpp  barrier.hpp  beacon.hpp  bedrock.hpp  bee_nest.hpp  beehive.hpp  beetroots.hpp  bell.hpp  birch_button.hpp  birch_door.hpp  birch_fence.hpp  birch_fence_gate.hpp  (+642 more)
libs/minecraft/chunk/: chunk.hpp
libs/minecraft/chunks/: bitpack.hpp  block_update.hpp  chunk.cpp  chunk.hpp  chunk.spec.cpp  chunk_cache.hpp  chunk_column_impl.cpp  chunk_column_impl.hpp  chunk_column_impl.spec.cpp  chunk_data_impl.cpp  chunk_data_impl.hpp  chunk_data_impl.spec.cpp  chunk_impl.cpp  chunk_impl.hpp  chunk_impl.spec.cpp  chunk_section_impl.cpp  chunk_section_impl.hpp  chunk_section_impl.spec.cpp  chunk_service.cpp  chunk_service.hpp  chunk_service_traits.hpp  chunk_tools.hpp  chunk_update.hpp  connection.cpp  connection.hpp  connection_impl.cpp  connection_impl.hpp  connection_impl.ipp.hpp  map_view.hpp  palette.cpp  palette.hpp  palette.spec.cpp  provider.cpp  provider.hpp  provider.spec.cpp  provider_impl.cpp  provider_impl.hpp  provider_impl.ipp.hpp  slice_impl.cpp  slice_impl.hpp  (+2 more)
libs/minecraft/client/: connect.hpp  encryption_response.cpp  encryption_response.hpp  handshake.cpp  handshake.hpp  keep_alive.cpp  keep_alive.hpp  login_start.cpp  login_start.hpp  play_id.hpp
libs/minecraft/entities/: entity.hpp  entity_traits.hpp
libs/minecraft/nbt/: composer.hpp  compound.cpp  compound.hpp  compound.spec.cpp  compound_service.cpp  compound_service.hpp  compound_service.ipp  config.hpp  data_service.cpp  data_service.hpp  data_service.ipp  encoder.cpp  encoder.hpp  error.hpp  free_block.hpp  fundamental.cpp  fundamental.hpp  fundamental.spec.cpp  fundamental_service.hpp  handle.hpp  hash_table_service.cpp  hash_table_service.hpp  hash_table_service.ipp  impl.cpp  impl.hpp  impl.spec.cpp  integral_array.cpp  integral_array.hpp  list.cpp  list.hpp  list_service.cpp  list_service.hpp  nbt_end.hpp  nvp.hpp  nvp.spec.cpp  offset.hpp  parse_context.cpp  parse_context.hpp  parse_context.ipp.hpp  parse_context.spec.cpp  (+23 more)
libs/minecraft/packets/: client_play_packet.cpp  client_play_packet.hpp  direction.hpp  packet_base.hpp  packet_tests.spec.hpp  play_packet.hpp  server_play_packet.cpp  server_play_packet.hpp
libs/minecraft/pak/: pak.spec.cpp
libs/minecraft/player/: chunk_update_subscription_manager.hpp  login_result.hpp  player.cpp  player.hpp  player_cache.hpp  player_connection_base.hpp
libs/minecraft/posix/: file_descriptor.hpp  mmap.hpp
libs/minecraft/protocol/: client_connect.hpp  client_handshake.hpp  client_handshake.spec.cpp  client_ping.cpp  client_ping.hpp  compose_area.cpp  compose_area.hpp  compose_area.spec.cpp  compression.cpp  compression.hpp  compression.spec.cpp  connect.hpp  connection_state.hpp  daft_hash.cpp  daft_hash.hpp  daft_hash.spec.cpp  encryption_state.cpp  encryption_state.hpp  expect_frame.hpp  expect_frame.spec.cpp  frame_data.cpp  frame_data.hpp  mojang_login_data.cpp  mojang_login_data.hpp  mojang_login_data.spec.cpp  old_style_ping.hpp  protocol_version.hpp  read_frame.hpp  read_frame.spec.cpp  receive_login.cpp  receive_login.hpp  server_accept.cpp  server_accept.hpp  server_handshake.hpp  server_status.hpp  server_status.spec.cpp  shared_secret.cpp  shared_secret.hpp  stream.hpp  stream.ipp  (+7 more)
libs/minecraft/region/: async_queue_consume_handle.hpp  async_queue_impl.cpp  async_queue_impl.hpp  async_queue_produce_handle.hpp  bus_subscription.hpp  fake_bus.hpp  player_updates_queue.hpp  subscription_impl.hpp
libs/minecraft/security/: bignum.cpp  bignum.hpp  bignum.spec.cpp  cipher_context.cpp  cipher_context.hpp  cipher_context.ipp  error.cpp  (+8 more)
libs/polyfill/: CMakeLists.txt  bitset_tools.hpp  class_logger.cpp  class_logger.hpp  configuration.hpp  endpoint_hasher.cpp  endpoint_hasher.hpp  explain.cpp  explain.hpp  filesystem.hpp  hexdump.hpp  ignore_ws.hpp  join.hpp  multibyte.cpp  multibyte.hpp  net.hpp  outcome.hpp  report.cpp  report.hpp  report.spec.cpp  variant.hpp
src/gateway/: CMakeLists.txt  application.hpp  connection.cpp  connection.hpp  connection_cache.cpp  connection_cache.hpp  connection_impl.cpp  connection_impl.hpp  connection_manager.hpp  hexdump.cpp  hexdump.hpp  keep_alive_handler.hpp  keep_alive_impl.hpp  listener.cpp  listener.hpp  main.cpp  net.hpp  player_manager.hpp
src/region/: CMakeLists.txt  fake_bus.hpp  gateway_to_region_connection.hpp  main.cpp  player_cache.hpp  player_connection.hpp  region.hpp  region_server.cpp  region_server.hpp
(+325 files in other folders)
